# anyterial.github.io

./: publish_static.py  pyproject.toml  serve_dynamic.py
.github/workflows/: httkweb.yaml
src/: config.httkweb
src/content/: 404.md  about.md  index.md  publications.md  status.md  subscribe.md  subscribed.md  unsubscribed.md
src/functions/: init.py
src/static/: app.js  styles.css
src/templates/: 404.html.j2  base_default.html.j2  base_default.httkweb.html  default.html.j2  frontpage.html.j2  social_icons.html.j2
